--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
+    "@types/typescript": "^2.0.0",
     "backend": "file:",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
